# cutlist

./: .gitignore  LICENSE  README.md  binvox_rw.py  collect_results.py  dataset_setup.sh  design.py  experiments.csv  extern_datasets.py  finetune.zsh  generate_data.py  infer.py  main.py  misc_helper.py  models.py  pyproject.toml  scoring.py  shapeNetHelper.py  train_grpo.py
scripts/: dataset_setup.sh  finetune.sh  sbatch_finetuning.sh  sbatch_prepare_data.sh  setup_finetuned_model.sh  setup_inference.sh
scripts/eulerScripts/: clean_partnet.sh  sbatch_finetuning.sh  sbatch_generate_finetuning_data.sh  sbatch_prepare_data.sh  sbatch_rl_grpo.sh  setup_clip.sh  setup_euler_python.sh
