[project]
name = "cutlist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "nltk>=3.9.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "pyarrow>=21.0.0",
    "pyvista>=0.46.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "treelib>=1.8.0",
    "trl>=0.24.0",
    "wandb>=0.22.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "snakeviz>=2.2.2",
]
